spring-domain-directory/src/main/java/com/example/demo/global/error/ErrorResponse.java
package com.example.demo.global.error;

public class ErrorResponse {
}
